--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@ See https://github.com/adobe-type-tools/cmap-resources
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <title>PDF.js viewer</title>
 
-
+    <!-- $FB: pdfjs path modified and additional files included -->
 
     <link rel="stylesheet" href="pdfjs/viewer.css">
 
@@ -37,13 +37,13 @@ See https://github.com/adobe-type-tools/cmap-resources
     <script src="pdfjs/build/pdf.js"></script>
 
     <script src="pdfjs/viewer.js"></script>
-	
-	<script src="external/jquery.3.3.1.min.js"></script>
-	<script src="external/modernizr.3.6.0.min.js"></script>
 
-	<link rel="stylesheet" href="turnjs/turn.css">
-	
-	<script src="pdf-turn.js"></script>
+    <script src="external/jquery.3.3.1.min.js"></script>
+    <script src="external/modernizr.3.6.0.min.js"></script>
+
+    <link rel="stylesheet" href="turnjs/turn.css">
+
+    <script src="pdf-turn.js"></script>
   </head>
 
   <body tabindex="1" class="loadingInProgress">
@@ -166,9 +166,10 @@ See https://github.com/adobe-type-tools/cmap-resources
             <button id="scrollWrapped" class="secondaryToolbarButton scrollModeButtons scrollWrapped" title="Use Wrapped Scrolling" tabindex="64" data-l10n-id="scroll_wrapped">
               <span data-l10n-id="scroll_wrapped_label">Wrapped Scrolling</span>
             </button>
+            <!-- $FB: bookflip button -->
             <button id="bookFlip" class="secondaryToolbarButton scrollModeButtons bookFlip" title="Use Book Flip" tabindex="65" data-l10n-id="book_flip">
-			  <span data-l10n-id="book_flip_label">Book Flip</span>
-			</button>
+              <span data-l10n-id="book_flip_label">Book Flip</span>
+            </button>
 
             <div class="horizontalToolbarSeparator scrollModeButtons"></div>
 
