Modernizr no longer used

--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <script src="pdfjs/viewer.js"></script>
 
-    <script src="external/jquery.3.4.1.min.js"></script>
+    <script src="external/jquery-3.4.1.min.js"></script>
     <script src="external/turn.min.js"></script>
 
     <link rel="stylesheet" href="pdf-turn/pdf-turn.css">
