--- a/external/pdfjs-2.2.228-dist/web/viewer.html
+++ b/external/pdfjs-2.2.228-dist/web/viewer.html
@@ -41,7 +41,7 @@ See https://github.com/adobe-type-tools/cmap-resources
 
     <!-- $FB: additional files included -->
     <script src="../../jquery-3.4.1.min.js"></script>
-    <script src="../../turn.min.js"></script>
+    <script src="../../turn.js"></script>
     <link rel="stylesheet" href="../../../pdf-turn/pdf-turn.css">
     <script src="../../../pdf-turn/pdf-turn.js"></script>
 
